# de-langchain

./: .planning_rag.py.swp  .pre-commit-config.yaml  .rag.py.swp  LICENSE  README.md  planning_rag.py  pyproject.toml  rag.py  setup.cfg
.github/workflows/: hoge.yml  pre-commit.yaml
de-langchain/: document_loaders.py  documents.py  serializable.py
delangchain/: document_loaders.py  documents.py  runnables.py  serializable.py
resource/: mlb_teams_2012_sample.csv
