[project]
name = "de-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.7",
    "langchain-core>=0.3.18",
    "langchain-openai>=0.2.8",
    "langchain>=0.3.7",
]
